--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>PokeTwo</title>
+    <title>Pokemon Two</title>
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
@@ -14,7 +14,7 @@
         <h1
           class="text-2xl md:text-4xl lg:text-6xl font-bold tracking-tight text-yellow-300"
         >
-          <span class="pink">PokeTwo</span>
+          <span class="pink">Pokemon Two</span>
         </h1>
       </div>
 
